k8s/talos/apps/plex-media-stack/tautulli-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: plex-media-stack
spec:
  selector:
    app: tautulli
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
